# Speech2Text

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
speech2text/src/: __init__.py  config.py  elevenlabs.py  excel.py  gemini.py  google.py  google_drive.py  models.py  nlp_client.py  utils.py
